--- a/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
+++ b/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
@@ -1434,6 +1434,7 @@
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Warranty\Index.cshtml" />
     <Content Include="Views\Warranty\Info.cshtml" />
+    <Content Include="Views\Warranty\Check.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
