--- a/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
+++ b/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
@@ -1366,6 +1366,7 @@
     <Content Include="theme\wp-content\uploads\2019\01\m86.jpg" />
     <Content Include="theme\wp-content\uploads\2019\01\s8-01.jpg" />
     <Content Include="theme\wp-content\uploads\2019\01\sidebar-banner-270x300.jpg" />
+    <Content Include="theme\wp-content\uploads\h378b8c.jpg" />
     <Content Include="theme\wp-includes\css\dist\block-library\style.min.css" />
     <Content Include="theme\wp-includes\css\dist\block-library\theme.min.css" />
     <Content Include="theme\wp-includes\js\comment-reply.min.js" />
