--- a/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
+++ b/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
@@ -1437,6 +1437,7 @@
     <Content Include="Views\Warranty\Info.cshtml" />
     <Content Include="Views\Warranty\Check.cshtml" />
     <Content Include="Views\Warranty\AjaxInfo.cshtml" />
+    <Content Include="Views\Home\IconList.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
