--- a/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
+++ b/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
@@ -156,6 +156,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="aboutHtml.html" />
     <Content Include="404.html" />
     <Content Include="assets\animate.css" />
     <Content Include="assets\animate.js" />
