--- a/12_Shop_MultiProduct/12_Theme_MultiProduct.csproj
+++ b/12_Shop_MultiProduct/12_Theme_MultiProduct.csproj
@@ -701,6 +701,8 @@
     <Content Include="Views\Account\SendCode.cshtml" />
     <Content Include="Views\Account\VerifyCode.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Views\Home\_partial_ProductListBycategory.cshtml" />
+    <Content Include="Views\Home\_partial_NewProduct.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
