--- a/06_Shop_Onepage/06_Shop_OnePage.csproj
+++ b/06_Shop_Onepage/06_Shop_OnePage.csproj
@@ -482,6 +482,9 @@
     <Content Include="Web References\WebService\SearchArticleResults.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
+    <Content Include="Web References\WebService\WarrantyCard.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
