--- a/17_Tour/17_tour.csproj
+++ b/17_Tour/17_tour.csproj
@@ -160,6 +160,70 @@
     <Content Include="404.html" />
     <Content Include="assets\animate.css" />
     <Content Include="assets\animate.js" />
+    <Content Include="assets\bootstrap\css\bootstrap.min.css" />
+    <Content Include="assets\bootstrap\js\bootstrap.min.js" />
+    <Content Include="assets\css\fonts.css" />
+    <Content Include="assets\css\hanhtrinh.css" />
+    <Content Include="assets\css\lienhe.css" />
+    <Content Include="assets\css\multi_carousel.css" />
+    <Content Include="assets\css\styles.css" />
+    <Content Include="assets\css\thuvienanh.css" />
+    <Content Include="assets\fonts\font-awesome.min.css" />
+    <Content Include="assets\fonts\material-icons.min.css" />
+    <Content Include="assets\fonts\MaterialIcons-Regular.svg" />
+    <Content Include="assets\img\AmzTourLaGi1.png" />
+    <Content Include="assets\img\AmzTourLaGi2.png" />
+    <Content Include="assets\img\btc.png" />
+    <Content Include="assets\img\chdcmht_1.png" />
+    <Content Include="assets\img\chdcmht_2.png" />
+    <Content Include="assets\img\chdcmht_3.png" />
+    <Content Include="assets\img\chdcmht_4.png" />
+    <Content Include="assets\img\cscn1.png" />
+    <Content Include="assets\img\cscn2.png" />
+    <Content Include="assets\img\cscn3.png" />
+    <Content Include="assets\img\cscn4.png" />
+    <Content Include="assets\img\cscn5.png" />
+    <Content Include="assets\img\cscn6.png" />
+    <Content Include="assets\img\dau-ngoac-hoi.png" />
+    <Content Include="assets\img\dt1.jpg" />
+    <Content Include="assets\img\dt1.png" />
+    <Content Include="assets\img\dt2.jpg" />
+    <Content Include="assets\img\dt2.png" />
+    <Content Include="assets\img\dt3.jpg" />
+    <Content Include="assets\img\dt3.png" />
+    <Content Include="assets\img\dt4.jpg" />
+    <Content Include="assets\img\EnFlag.png" />
+    <Content Include="assets\img\gach-xanh.png" />
+    <Content Include="assets\img\hanhtrinh1.png" />
+    <Content Include="assets\img\hanhtrinh2.png" />
+    <Content Include="assets\img\hanhtrinh3.png" />
+    <Content Include="assets\img\hanhtrinh4.png" />
+    <Content Include="assets\img\HeaderImg.png" />
+    <Content Include="assets\img\Intro.png" />
+    <Content Include="assets\img\khachmoi-binhan.png" />
+    <Content Include="assets\img\khachmoi-buiphuongnga.png" />
+    <Content Include="assets\img\khachmoi-hoanganh.png" />
+    <Content Include="assets\img\khachmoi-jayquan.png" />
+    <Content Include="assets\img\khachmoi-nhatruc.png" />
+    <Content Include="assets\img\khachmoi-quangvinh.png" />
+    <Content Include="assets\img\khachmoi-trangha.png" />
+    <Content Include="assets\img\Logo.png" />
+    <Content Include="assets\img\ntt1.jpg" />
+    <Content Include="assets\img\ntt10.jpg" />
+    <Content Include="assets\img\ntt2.jpg" />
+    <Content Include="assets\img\ntt3.jpg" />
+    <Content Include="assets\img\ntt4.jpg" />
+    <Content Include="assets\img\ntt5.jpg" />
+    <Content Include="assets\img\ntt6.jpg" />
+    <Content Include="assets\img\ntt7.jpg" />
+    <Content Include="assets\img\ntt8.jpg" />
+    <Content Include="assets\img\ntt9.jpg" />
+    <Content Include="assets\img\test.jpg" />
+    <Content Include="assets\img\thuvien1.png" />
+    <Content Include="assets\img\thuvien2.png" />
+    <Content Include="assets\img\thuvien3.png" />
+    <Content Include="assets\img\thuvien4.png" />
+    <Content Include="assets\img\ViFlag.png" />
     <Content Include="assets\js\countdown\countdownBasic.html" />
     <Content Include="assets\js\countdown\countdownGlowing.gif" />
     <Content Include="assets\js\countdown\countdownLED.png" />
@@ -178,6 +242,7 @@
     <Content Include="assets\js\common.js" />
     <Content Include="assets\js\express_buttons.js" />
     <Content Include="assets\js\features.js" />
+    <Content Include="assets\js\hanhtrinh.js" />
     <Content Include="assets\js\jquery.bxslider.min.js" />
     <Content Include="assets\js\jquery.flexslider.js" />
     <Content Include="assets\js\jquery.min.js" />
@@ -185,7 +250,9 @@
     <Content Include="assets\js\owl.carousel.min.js" />
     <Content Include="assets\js\parallax.js" />
     <Content Include="assets\js\revslider.js" />
+    <Content Include="assets\js\script.js" />
     <Content Include="assets\js\slider.js" />
+    <Content Include="assets\js\thuvienanh.js" />
     <Content Include="assets\owl.carousel\owl.carousel.css" />
     <Content Include="assets\owl.carousel\owl.carousel.js" />
     <Content Include="assets\owl.carousel\owl.carousel.min.js" />
@@ -369,6 +436,7 @@
     <Content Include="assets\stylesheet\responsive.css" />
     <Content Include="assets\stylesheet\revslider.css" />
     <Content Include="assets\stylesheet\style.css" />
+    <Content Include="assets\vnflag.png" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="handler\ProductHandler.ashx" />
@@ -425,6 +493,11 @@
     <Content Include="html\assets\fonts\MaterialIcons-Regular.woff2" />
     <Content Include="html\assets\fonts\SVN-Gotham Book.otf" />
     <Content Include="html\README.md" />
+    <Content Include="assets\fonts\MaterialIcons-Regular.eot" />
+    <Content Include="assets\fonts\MaterialIcons-Regular.ttf" />
+    <Content Include="assets\fonts\MaterialIcons-Regular.woff" />
+    <Content Include="assets\fonts\MaterialIcons-Regular.woff2" />
+    <Content Include="assets\fonts\SVN-Gotham Book.otf" />
     <None Include="Properties\PublishProfiles\Theme 16.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
