--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ MLTest/obj/
 16_Shop_MultiProduct/16_Theme_MultiProduct.csproj.user
 15_Company_Info/15_company_Info.csproj.user
 14_8_CompanyInfo/14_CompanyInfo.csproj.user
+17_Tour/obj/
