--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ MLTest/obj/
 15_Company_Info/15_company_Info.csproj.user
 14_8_CompanyInfo/14_CompanyInfo.csproj.user
 17_Tour/obj/
+17_Tour/bin/
