--- a/17_Tour/17_tour.csproj
+++ b/17_Tour/17_tour.csproj
@@ -171,6 +171,8 @@
     <Content Include="assets\fonts\font-awesome.min.css" />
     <Content Include="assets\fonts\material-icons.min.css" />
     <Content Include="assets\fonts\MaterialIcons-Regular.svg" />
+    <Content Include="assets\img\1.svg" />
+    <Content Include="assets\img\2.svg" />
     <Content Include="assets\img\AmzTourLaGi1.png" />
     <Content Include="assets\img\AmzTourLaGi2.png" />
     <Content Include="assets\img\btc.png" />
