--- a/16_Shop_MultiProduct/Web.config
+++ b/16_Shop_MultiProduct/Web.config
@@ -118,7 +118,7 @@
   <applicationSettings>
     <AnperoFrontend.Properties.Settings>
       <setting name="AnperoFrontend_AnperoService_AnperoService" serializeAs="String">
-        <value>http://wsv.anpero.com/AnperoService.asmx</value>        
+        <value>http://localhost:8434/AnperoService.asmx</value>        
       </setting>
     </AnperoFrontend.Properties.Settings>
   </applicationSettings>
