--- a/17_Tour/17_tour.csproj
+++ b/17_Tour/17_tour.csproj
@@ -1827,6 +1827,7 @@
     <Content Include="Views\Warranty\AjaxInfo.cshtml" />
     <Content Include="Views\Home\IconList.cshtml" />
     <Content Include="Views\Warranty\CheckSeria.cshtml" />
+    <Content Include="Views\Product\thuvien.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
