--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,5 @@ MLTest/obj/
 14_8_CompanyInfo/14_CompanyInfo.csproj.user
 17_Tour/obj/
 17_Tour/bin/
+14_8_CompanyInfo/obj/
+16_Shop_MultiProduct/bin/
