--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,6 @@ MLTest/obj/
 17_Tour/bin/
 14_8_CompanyInfo/obj/
 16_Shop_MultiProduct/bin/
+12_Shop_MultiProduct-2/obj/
+15_Company_Info/bin/
+15_Company_Info/bin/AnperoFrontend.pdb
