--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,8 @@ Shop_07_MultiProduct/obj/
 07_Shop_MultiProduct/07_Shop_MultiProduct.csproj.user
 06_Shop_Onepage/06_Shop_OnePage.csproj.user
 05_Shop_MultiProduct/05_Shop_MultiProduct.csproj.user
+MLTest/obj/
+16_Shop_MultiProduct/obj/
+15_Company_Info/obj/
+04_V2_Shop_multiProduct/obj/
+14_8_CompanyInfo/obj/
